--- a/_posts/2015-10-14-WGCNA.md
+++ b/_posts/2015-10-14-WGCNA.md
@@ -1,11 +1,6 @@
 ---
-title: "WGCNA tutorial"
-output:
-  html_document:
-    fig_width: 9
-    fig_height: 7
+layout: default
 ---
-
 
 
 WGCNA: Weighted gene co-expression network analysis
