--- a/scw2015/subpopulations/analysis_of_heterogeneity_and_subpopulations.Rmd
+++ b/scw2015/subpopulations/analysis_of_heterogeneity_and_subpopulations.Rmd
@@ -11,7 +11,7 @@ opts_chunk$set(
     warning = FALSE,
     message = FALSE,
     fig.show = 'hold',
-    fig.path = 'figures/',
+    fig.path = 'figure/',
     cache.path = 'cache/',
     cache = TRUE
 )
@@ -21,16 +21,17 @@ In the last session of the workshop, we learned about the techniques that we can
 
 # Getting started
 
-Be sure to have the appropriate modules loaded prior to starting analyses. 
+Be sure to have the appropriate modules loaded prior to starting analyses. For this workshop, this has already been done for you.
 ```
 module load dev/python/2.7.6
-module load stats/R/3.2.1
+module load stats/R/3.2.1-Cairo
 ```
 
 A single cell dataset from [Pollen et al.](http://www.nature.com/nbt/journal/v32/n10/abs/nbt.2967.html) has been pre-prepared for you. The data is provided as a matrix of gene counts, where each column corresponds to a cell and each row a gene. 
-```{r}
+
+```{r 'clean'}
 # load and clean data
-load('data_clean.RData')
+load('/groups/pklab/scw/scw2015/subpopulations/data_clean.RData')
 cd[1:5, 1:5]
 
 # filter out low-gene cells (often empty wells)
@@ -48,7 +49,7 @@ mat[1:5, 1:5]
 
 For this dataset, the subpopulations group labels have also been provided to you as a reference so we can see how different methods perform in recapitulating these labels. 
 
-```{r}
+```{r 'sg'}
 head(sg, 5)
 ```
 
@@ -107,9 +108,11 @@ heatmap(mat[vi,], Rowv=NA, Colv=as.dendrogram(hc), ColSideColors = sgCol,  col=c
 
 # BackSPIN
 
-Biclustering can be used to overcome this problem by simultaneously clustering genes and cells. [BackSPIN](http://www.sciencemag.org/content/347/6226/1138.full) is an iterative, biclustering method based on sorting points into neighborhoods that can be used to cluster genes and cells to identify subpopulations as well as potential markers for each subpopulations. BackSPIN requires a particular CEF file as the input, so first, we will write out our data into that format.
+Biclustering can be used to overcome this problem by simultaneously clustering genes and cells. [BackSPIN](http://www.sciencemag.org/content/347/6226/1138.full) is an iterative, biclustering method based on sorting points into neighborhoods that can be used to cluster genes and cells to identify subpopulations as well as potential markers for each subpopulations. BackSPIN has already been downloaded and installed for you, but if you are doing this at home, please consult the [BackSPIN installation instructions](https://github.com/linnarsson-lab/BackSPIN).
 
-```{r}
+BackSPIN requires a particular CEF file as the input, so first, we will write out our data into that format.
+
+```{r 'backspin'}
 write(file="cd.cef", paste("CEF\t0\t1\t1", nrow(cd), ncol(cd), "0", sep="\t"))
 write(file="cd.cef", paste('\t', c("cell"), paste(colnames(cd), collapse="\t"), sep='\t'), append=T)
 x <- cbind(rep("",nrow(cd)), cd)
@@ -119,8 +122,8 @@ write.table(file="cd.cef", x, append=T, col.names=F, row.names=T, quote=F, sep="
 
 Now we can run BackSPIN by calling Python from within R.
 
-```{r eval=FALSE}
-system("./BackSPIN-1.0/backSPIN.py -i cd.cef -o cd.clustered.cef -f 2000 -v -d 3")
+```{r 'backspin'}
+system("/groups/pklab/scw2015/jfan/BackSPIN-1.0/backSPIN.py -i cd.cef -o cd.clustered.cef -f 2000 -v -d 3")
 ```
 
 Now we can read the results back into R and visualize. We can note how BackSPIN first splits the red and green groups of cells from the blue and purple cells, and then proceeds to iteratively split within each of the identified groups.
@@ -158,7 +161,7 @@ Interestingly, we can see how the green group of cells were separated into diffe
 
 [PAGODA](http://biorxiv.org/content/early/2015/09/16/026948) is a method developed by the Kharchenko lab that enables identification and characterization of subpopulations in a manner that potentially resolves multiple overlapping aspects of transcriptional heterogeneity. 
 
-PAGODA routines are implemented within the SCDE R package. 
+PAGODA routines are implemented within the [SCDE R package](https://github.com/hms-dbmi/scde). This has already been installed for you.
 
 ```{r eval=FALSE}
 # DO NOT EVALUATE
@@ -171,7 +174,7 @@ Error models are first fitted for each single cell. The purpose of the fitting i
 
 The fitting process relies on a subset of robust genes that are detected in multiple cross-cell comparisons. Due to the number of cross-cell comparisons, this step is fairly computationally intensive. For the purpose of example, we will compute error models for a small subset of 10 cells. 
 
-```{r}
+```{r 'model fits'}
 library(scde)
 knn <- knn.error.models(cd[, 1:10], k = ncol(cd)/5, n.cores = 4, min.count.threshold = 2, min.nonfailed = 5, max.model.plots = 5, save.model.plots = TRUE, verbose = 1)  # turn on verbosity
 head(knn)
@@ -179,17 +182,17 @@ head(knn)
 
 In the resulting summary table, `corr.a` and `corr.b` are slope and intersept of the correlated component fit, `conc.a` and `conc.b` are to the concomitant or associated fits, `corr.theta` is the NB over-dispersion, and `fail.r` is the background Poisson rate (fixed). We can also take a look at the resulting `cell.model.fits.pdf` file that is outputted to get a sense of how these parameters related to the data. 
 
-![sample cell model fit](figures/cell.model.fits.1.png) 
+![sample cell model fit](figure/cell.model.fits.1.png) 
 
 The full set of error models for all cells has been precomputed for you and can be loaded.
 
-```{r}
-load('knn.RData')
+```{r 'knn'}
+load('/groups/pklab/scw2015/jfan/knn.RData')
 ```
 
 Particularly poor cells may result in abnormal fits, most commonly showing negtive `corr.a`, and should be removed.
 
-```{r}
+```{r 'filter'}
 # filter out cells that don't show positive correlation with
 # the expected expression magnitudes (very poor fits)
 valid.cells <- knn$corr.a > 0
@@ -207,15 +210,15 @@ varinfo <- pagoda.varnorm(knn, counts = cd, trim = 3/ncol(cd), max.adj.var = 5, 
 
 Sequencing depth or gene coverage is typically still a major aspects of variability, as we have seen previously in our PCA analysis. We can control for the gene coverage (estimated as a number of genes with non-zero magnitude per cell) and normalize out that aspect of cell heterogeneity.
 
-```{r}
+```{r 'varnorm'}
 varinfo <- pagoda.subtract.aspect(varinfo, colSums(cd[, rownames(knn)]>0))
 ```
 
 We assess for overdispersion in gene sets, we can take advantage of pre-defined pathway gene sets such as GO annotations and look for pathways that exhibit statistically significant excess of coordinated variability. Intuitively, if a pathway is differentially perturbed, we expect all genes within said pathway to be upregulated or downregulated in the same group of cells. In `PAGODA`, for each gene set, we tested whether the amount of variance explained by the first principal component significantly exceed the background expectation.
 
-A set of GO terms has been pre-defined for you and can be loaded.
+A set of GO terms has been pre-defined for you and can be loaded. However, the code is provided for you to show how these GO terms were obtained. 
 
-```{r eval=FALSE}
+```{r 'GO' eval=FALSE}
 # DO NOT EVALUATE
 # code is provided to show you how the GO terms were derived
 
@@ -238,28 +241,28 @@ names(go.env) <- paste(names(go.env), desc)  # append description to the names
 go.env <- list2env(go.env)  
 ```
 
-```{r eval=FALSE}
-load('go.env.RData')
+```{r 'GO' eval=FALSE}
+load('/groups/pklab/scw2015/jfan/go.env.RData')
 # pathway overdispersion
 pwpca <- pagoda.pathway.wPCA(varinfo, go.env, n.components = 1, n.cores = 4, n.internal.shuffles = 0)
 ```
 
 Instead of relying on pre-defined pathways, we can also test on 'de novo' gene sets whose expression profiles are well-correlated within the given dataset.
 
-```{r eval=FALSE}
+```{r 'denovo' eval=FALSE}
 # de novo gene sets
 clpca <- pagoda.gene.clusters(varinfo, trim = 7.1/ncol(varinfo$mat), n.clusters = 150, n.cores = 4, plot = FALSE)
 ```
 
 Testing these pre-defined pathways and annotated gene sets may take a few minutes. If you are having trouble keeping up, you can load a pre-computed version.
 
-```{r}
-load('clusters.RData')
+```{r 'clusters'}
+load('/groups/pklab/scw2015/jfan/clusters.RData')
 ```
 
 Taking into consideration both pre-defined pathways and de-novo gene sets, we can see which aspects of heterogeneity are the most overdispersed and base our cell cluster only on the most overdispersed and informative pathways and gene sets. 
 
-```{r}
+```{r 'topasp'}
 # get full info on the top aspects
 df <- pagoda.top.aspects(pwpca, clpca, z.score = 1.96, return.table = TRUE)
 head(df)
@@ -270,7 +273,7 @@ hc <- pagoda.cluster.cells(tam, varinfo)
 
 Because many of our annotated pathways and de novo gene sets likely share many genes or exhibit similarpatterns of variability, we must reduce such redundancy. First, we will combine pathways that are driven by the same sets of genes.
 
-```{r}
+```{r 'tamr'}
 # reduce redundant aspects
 tamr <- pagoda.reduce.loading.redundancy(tam, pwpca, clpca)
 ```
@@ -285,14 +288,14 @@ Now we can view the final result as a heatmap where each row here represents a c
 
 ```{r 'pagoda', fig.width=8, fig.height=5}
 # view final result
-pagoda.view.aspects(tamr2, cell.clustering = hc, box = TRUE, labCol = NA, margins = c(0.5, 20), col.cols = sgCol)
+pagoda.view.aspects(tamr2, cell.clustering = hc, box = TRUE, labCol = NA, margins = c(0.5, 20), col.cols = rbind(sgCol))
 ```
 
 We can also create an app to interactively browse the results.
 
-```{r eval=FALSE}
-# compile a browsable app, showing top three clusters with the top color bar
-app <- make.pagoda.app(tamr2, tam, varinfo, go.env, pwpca, clpca, col.cols = sgCol, cell.clustering = hc, title = "NPCs")
+```{r 'app' eval=FALSE}
+# compile a browsable app
+app <- make.pagoda.app(tamr2, tam, varinfo, go.env, pwpca, clpca, col.cols = rbind(sgCol), cell.clustering = hc, title = "NPCs")
 # show app in the browser (port 1468)
 show.app(app, "pollen", browse = TRUE, port = 1468)  
 ```
