--- a/_posts/2015-11-02-WGCNA.md
+++ b/_posts/2015-11-02-WGCNA.md
@@ -101,7 +101,7 @@ WGCNA requires genes be given in the columns
 
 
 ```r
-load("varinfo.RData");
+load("/groups/pklab/scw/scw2015/varinfo.RData");
 mydata=varinfo$mat;
 dim(mydata)
 ```
