--- a/_posts/2015-11-02-WGCNA.md
+++ b/_posts/2015-11-02-WGCNA.md
@@ -1,4 +1,5 @@
 ---
+layout: default
 title: "WGCNA tutorial"
 output:
   html_document:
@@ -63,11 +64,11 @@ library(WGCNA)
 ## *
 ## *    for example 
 ## *
-## *          ALLOW_WGCNA_THREADS=16
+## *          ALLOW_WGCNA_THREADS=12
 ## *
 ## *    To set the environment variable in linux bash shell, type 
 ## *
-## *           export ALLOW_WGCNA_THREADS=16
+## *           export ALLOW_WGCNA_THREADS=12
 ## *
 ## *     before running R. Other operating systems or shells will
 ## *     have a similar command to achieve the same aim.
@@ -91,7 +92,7 @@ enableWGCNAThreads()
 ```
 
 ```
-## Allowing parallel execution with up to 15 working processes.
+## Allowing parallel execution with up to 11 working processes.
 ```
 
 
@@ -190,7 +191,7 @@ TOM=TOMsimilarityFromExpr(datExpr,networkType = "signed", TOMType = "signed", po
 
 ```
 ## TOM calculation: adjacency..
-## ..will use 15 parallel threads.
+## ..will use 11 parallel threads.
 ##  Fraction of slow calculations: 0.000000
 ## ..connectivity..
 ## ..matrix multiplication..
