--- a/_posts/2015-11-03-WGCNA.md
+++ b/_posts/2015-11-03-WGCNA.md
@@ -13,20 +13,20 @@ WGCNA: Weighted gene co-expression network analysis
 ========================================================
 This code has been adapted from the tutorials available at [WGCNA website](http://labs.genetics.ucla.edu/horvath/CoexpressionNetwork/Rpackages/WGCNA/)
 
-Installing required packages:
-WGCNA requires the following packages to be installed,
-currently one of them is only available through bioconductor
+
+Getting started: in order to run R on Orchestra, we will first connect to an interactive queue
 
 
 ```r
-install.packages(c("dynamicTreeCut", "cluster", "flashClust", "Hmisc", "reshape", "foreach", "doParallel") ) 
-source("http://bioconductor.org/biocLite.R") 
-biocLite("impute")
-install.packages("WGCNA")
+# bsub -n 2 -Is -q interactive bash
+# git clone https://github.com/hms-dbmi/scw.git
+# cd scw/scw2015
+# source setup.sh
+# R
 ```
 
 
-Loading WGCNA library, and settings to allow parallel execution
+Loading WGCNA library, and settings to allow parallel execution. Please note that WGCNA and dependencies have been already installed for you.
 
 
 
@@ -275,4 +275,4 @@ We can now look at the module gene listings and try to interpret their functions
 
 
 
-
+WGCNA has many more features, such as quantifying module similarity by eigengene correlation, etc. For details, please visit [WGCNA website](http://labs.genetics.ucla.edu/horvath/CoexpressionNetwork/Rpackages/WGCNA/).
